--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -10,19 +10,21 @@
   src: url("../../assets/fonts/Mohave.otf") format("opentype"); }
 body {
   font-family: "Mohave", sans-serif !important;
-  background: #fff; }
+  background: #fff;
+  margin-top: -20px; }
 
 .header {
   border-bottom: solid 3px black;
-  background: url(../../images/girlBackground.jpg) no-repeat top;
-  background-size: 100% auto; }
+  background: url(../../images/girlBackground.jpg) top;
+  background-size: 100% auto;
+  padding: 30px 0 !important; }
 
 .attachment-post-thumb {
   max-width: 100% !important;
   height: auto !important; }
 
 .main {
-  padding: 30px 10%; }
+  padding: 30px 0px; }
   .main .title p {
     font-size: 18px;
     margin: 15px 0 !important;
