--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -14,12 +14,14 @@
 body {
  	font-family: 'Mohave', sans-serif!important;
  	background: #fff;
+ 	margin-top: -20px;
 }
 
 .header {
 	border-bottom: solid 3px black;
-	background: url(../../images/girlBackground.jpg) no-repeat top;
+	background: url(../../images/girlBackground.jpg) top;
 	background-size: 100% auto;
+	padding: 30px 0!important;
 }
 
 // THUMBNAILS
@@ -30,7 +32,7 @@ body {
 
 // MAIN CONTENT
 .main {
-	padding: 30px 10%;
+	padding: 30px 0px;
 
 	.title p{
 		font-size: 18px;
