--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -8,6 +8,15 @@
 @font-face {
   font-family: 'Mohave';
   src: url("../../assets/fonts/Mohave.otf") format("opentype"); }
+@font-face {
+  font-family: 'Mohave Italics';
+  src: url("../../assets/fonts/Mohave Italics.otf") format("opentype"); }
+@font-face {
+  font-family: 'Mohave-Bold';
+  src: url("../../assets/fonts/Mohave-Bold.otf") format("opentype"); }
+@font-face {
+  font-family: 'Mohave-Bold Italics';
+  src: url("../../assets/fonts/Mohave-Bold Italics.otf") format("opentype"); }
 body {
   font-family: "Mohave", sans-serif !important;
   background: #fff;
@@ -18,6 +27,8 @@ body {
   background: url(../../images/girlBackground.jpg) top;
   background-size: 100% auto;
   padding: 30px 0 !important; }
+  .header #countdown {
+    font-family: "Mohave-Bold", sans-serif !important; }
 
 .attachment-post-thumb {
   max-width: 100% !important;
