--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -6,10 +6,7 @@
  * Licensed under the GPLv2+ license.
  */
 
-@font-face {
-	font-family: 'Mohave';
-  src: url('../../assets/fonts/Mohave.otf') format('opentype');
-}
+@import 'fonts';
 
 body {
  	font-family: 'Mohave', sans-serif!important;
@@ -22,6 +19,10 @@ body {
 	background: url(../../images/girlBackground.jpg) top;
 	background-size: 100% auto;
 	padding: 30px 0!important;
+
+	#countdown {
+		font-family: 'Mohave-Bold', sans-serif!important;
+	}
 }
 
 // THUMBNAILS
