--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -23,12 +23,20 @@ body {
   margin-top: -20px; }
 
 .header {
-  border-bottom: solid 3px black;
+  border-bottom: solid 3px #1a1a1a;
   background: url(../../images/girlBackground.jpg) top;
   background-size: 100% auto;
   padding: 30px 0 !important; }
   .header #countdown {
     font-family: "Mohave-Bold", sans-serif !important; }
+
+input#signUp {
+  color: #1a1a1a;
+  text-align: center !important;
+  font-size: 12px !important;
+  height: 50px !important;
+  width: 300px;
+  border: solid 2px #d3d3d3 !important; }
 
 .attachment-post-thumb {
   max-width: 100% !important;
@@ -39,9 +47,25 @@ body {
   .main .title p {
     font-size: 18px;
     margin: 15px 0 !important;
-    color: black; }
+    color: #1a1a1a; }
 
 .social-icons {
-  margin: 25px 0 50px 0; }
+  background: #1a1a1a;
+  color: #fff;
+  padding: 50px 0 50px 0; }
+  .social-icons h3 {
+    margin-bottom: 20px; }
+  .social-icons .btn {
+    margin-top: 20px;
+    border-radius: 0px !important;
+    color: #fff;
+    border: solid 1px #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 14px 24px;
+    transition: background-color 0.25s ease; }
+    .social-icons .btn:hover {
+      background: #fff;
+      color: #1a1a1a; }
 
 /*# sourceMappingURL=inarchives.css.map */
