--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -8,14 +8,17 @@
 
 @import 'fonts';
 
+$myBlack: #1a1a1a;
+$myWhite: #fff;
+
 body {
  	font-family: 'Mohave', sans-serif!important;
- 	background: #fff;
+ 	background: $myWhite;
  	margin-top: -20px;
 }
 
 .header {
-	border-bottom: solid 3px black;
+	border-bottom: solid 3px $myBlack;
 	background: url(../../images/girlBackground.jpg) top;
 	background-size: 100% auto;
 	padding: 30px 0!important;
@@ -23,6 +26,16 @@ body {
 	#countdown {
 		font-family: 'Mohave-Bold', sans-serif!important;
 	}
+
+}
+// INPUT
+input#signUp{
+	color: $myBlack;
+	text-align: center!important;
+	font-size: 12px!important;
+	height: 50px!important;
+	width: 300px;
+	border: solid 2px #d3d3d3!important;
 }
 
 // THUMBNAILS
@@ -38,11 +51,33 @@ body {
 	.title p{
 		font-size: 18px;
 		margin: 15px 0!important;
-		color: black;
+		color: $myBlack;
 	}
 }
 
 // FOOTER
 .social-icons {
-	margin: 25px 0 50px 0;
+	background: $myBlack;
+	color: $myWhite;
+	padding: 50px 0 50px 0;
+
+	h3 {
+		margin-bottom: 20px;
+	}
+
+  .btn {
+  	margin-top: 20px;
+    border-radius: 0px!important;
+    color: #fff;
+    border: solid 1px #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 14px 24px;
+    transition: background-color 0.25s ease;
+
+    &:hover{
+        background: $myWhite; 
+        color: $myBlack;
+    }
+  }
 }
