--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -30,7 +30,7 @@ body {
   .header #countdown {
     font-family: "Mohave-Bold", sans-serif !important; }
 
-input#signUp {
+input.signUp {
   color: #1a1a1a;
   text-align: center !important;
   font-size: 12px !important;
@@ -59,6 +59,7 @@ input#signUp {
     margin-top: 20px;
     border-radius: 0px !important;
     color: #fff;
+    background: #1a1a1a;
     border: solid 1px #fff;
     font-size: 14px;
     text-transform: uppercase;
