--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -17,17 +17,43 @@
 @font-face {
   font-family: 'Mohave-Bold Italics';
   src: url("../../assets/fonts/Mohave-Bold Italics.otf") format("opentype"); }
+::selection {
+  color: #fff;
+  background: #1a1a1a; }
+
+::-moz-selection {
+  color: #fff;
+  background: #1a1a1a; }
+
 body {
   font-family: "Mohave", sans-serif !important;
   background: #fff;
-  margin-top: -20px; }
+  margin-top: -20px;
+  word-wrap: break-word !important; }
 
 .header {
   border-bottom: solid 3px #1a1a1a;
   background: url(../../images/girlBackground.jpg) top;
   background-size: 100% auto;
-  padding: 30px 0 !important; }
+  padding: 30px 20px !important; }
+  .header a {
+    text-decoration: none;
+    color: #1a1a1a; }
+  .header h2 {
+    font-family: 'Mohave Italics', sans-serif;
+    letter-spacing: 10px; }
+  .header h3 {
+    font-family: 'Mohave Italics', sans-serif;
+    letter-spacing: 5px; }
+    .header h3 a {
+      padding: 0 5px;
+      transition: background 0.1s ease;
+      transition: color 0.1s ease; }
+      .header h3 a:hover {
+        background: #1a1a1a;
+        color: #fff; }
   .header #countdown {
+    font-size: 50px;
     font-family: "Mohave-Bold", sans-serif !important; }
 
 input.signUp {
@@ -55,7 +81,7 @@ input.signUp {
   padding: 50px 0 50px 0; }
   .social-icons h3 {
     margin-bottom: 20px; }
-  .social-icons .btn {
+  .social-icons .clickMe {
     margin-top: 20px;
     border-radius: 0px !important;
     color: #fff;
@@ -65,7 +91,7 @@ input.signUp {
     text-transform: uppercase;
     padding: 14px 24px;
     transition: background-color 0.25s ease; }
-    .social-icons .btn:hover {
+    .social-icons .clickMe:hover {
       background: #fff;
       color: #1a1a1a; }
 
