--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -119,3 +119,16 @@ input.signUp{
     }
   }
 }
+
+// MQ'S
+/* Small Devices, Tablets */
+	@media only screen and (min-width : 768px) {
+		.main {
+			.title p {
+				font-size: 18px;
+				// remain on one line
+				font-size: 1.5vw;
+			}
+		}
+
+  }
