--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -30,24 +30,39 @@ body {
 .header {
 	border-bottom: solid 3px $myBlack;
 	background: url(../../images/girlBackground.jpg) top;
-	background-size: 100% auto;
+	background-size: auto 100%;
 	padding: 30px 20px!important;
-
-	a {
-		text-decoration: none;
-		color: $myBlack;
-	}
 
 	h2{
 		font-family: 'Mohave Italics', sans-serif;
 		letter-spacing: 10px;
+
+		a {
+			color: $myBlack;
+			text-decoration: none;
+		}
+	}
+
+	.remind {
+		margin-top: 50px;
+				a{
+					border: solid 2px $myWhite;
+					background: rgb(0, 0, 0); /* fallback dec */
+					background: rgba(0, 0, 0, 0.25); 
+					color: $myWhite;
+					padding: 20px;
+					font-size: 16px;
+				}
 	}
 
 	h3 {
+		color: $myWhite;
 		font-family: 'Mohave Italics', sans-serif;
 		letter-spacing: 5px;
 
-		a{
+		a {
+			text-decoration: none;
+			color: $myWhite;
 			padding: 0 5px;
 			transition: background 0.1s ease;
 			transition: color 0.1s ease;
@@ -60,6 +75,7 @@ body {
 	}
 
 	#countdown {
+		color: $myWhite;
 		font-size: 50px;
 		font-family: 'Mohave-Bold', sans-serif!important;
 	}
@@ -122,6 +138,18 @@ input.signUp{
 
 // MQ'S
 	@media only screen and (min-width : 768px) {
+		.header {
+			background-size: 100% auto;
+
+			h3{
+				a {
+					color: $myBlack;
+				}
+			}
+			#countdown {
+				color: $myBlack;
+			}
+		}
 		.main {
 			.title p {
 				font-size: 18px;
