--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /**
- * Theme Name:  inArchives
+ * Theme Name:  twpol
  * Theme URI:   http://james-oldfield.co
- * Description: Custom theme for In Archives
+ * Description: Custom theme for IA
  * Author:      James Oldfield
  * Author URI:  http://james-oldfield.co
  * Version:     0.1.0
