--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -109,6 +109,17 @@ input.signUp {
       background: #fff;
       color: #1a1a1a; }
 
+.twpol {
+  position: absolute;
+  background: url(../../images/girlBackground.jpg) top;
+  background-size: auto 100%;
+  height: 100%;
+  width: 100%; }
+
+.twpolBody {
+  min-height: 100%;
+  margin: 0px; }
+
 @media only screen and (min-width: 768px) {
   .header {
     background-size: 100% auto; }
@@ -123,6 +134,13 @@ input.signUp {
 
   .attachment-post-thumb {
     max-height: 10vw;
-    width: auto; } }
+    width: auto; }
+
+  .twpolMain {
+    border: solid 3px #1a1a1a;
+    margin: 100px; } }
+@media only screen and (min-width: 992px) {
+  .twpol {
+    background-size: 100% auto; } }
 
 /*# sourceMappingURL=inarchives.css.map */
