--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -89,12 +89,13 @@ input.signUp {
     margin: 15px 0 !important;
     color: #1a1a1a; }
 
-.socialIcons {
+.social-icons {
+  background: #1a1a1a;
   color: #fff;
-  padding: 20px 0 20px 0; }
-  .socialIcons h3 {
+  padding: 50px 0 50px 0; }
+  .social-icons h3 {
     margin-bottom: 20px; }
-  .socialIcons .clickMe {
+  .social-icons .clickMe {
     margin-top: 20px;
     border-radius: 0px !important;
     color: #fff;
@@ -104,11 +105,9 @@ input.signUp {
     text-transform: uppercase;
     padding: 14px 24px;
     transition: background-color 0.25s ease; }
-    .socialIcons .clickMe:hover {
+    .social-icons .clickMe:hover {
       background: #fff;
       color: #1a1a1a; }
-  .socialIcons .bottom {
-    margin-bottom: 50px; }
 
 .twpolBody {
   background: url(../../images/girlBackground.jpg) center fixed no-repeat;
@@ -128,7 +127,7 @@ input.signUp {
 .twpolMain {
   margin-bottom: 100px; }
   .twpolMain .details {
-    margin-top: 50px; }
+    margin: 50px auto; }
     .twpolMain .details h2 a {
       color: #fff;
       padding: 5px; }
@@ -136,6 +135,8 @@ input.signUp {
         text-decoration: none;
         color: #1a1a1a;
         background: #fff; }
+    .twpolMain .details .socialIcons {
+      margin: 25px auto; }
   .twpolMain h1 {
     padding-bottom: 50px; }
   .twpolMain .videoWrapper {
@@ -169,7 +170,8 @@ input.signUp {
     font-size: 1vw; }
 
   .twpol {
-    padding: 100px; }
+    padding: 100px;
+    padding-bottom: 75%; }
     .twpol .logo {
       margin-top: 0px; }
 
