--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -110,9 +110,10 @@ input.signUp{
 }
 
 // FOOTER
-.socialIcons {
+.social-icons {
+	background: $myBlack;
 	color: $myWhite;
-	padding: 20px 0 20px 0;
+	padding: 50px 0 50px 0;
 
 	h3 {
 		margin-bottom: 20px;
@@ -133,9 +134,6 @@ input.signUp{
         background: $myWhite; 
         color: $myBlack;
     }
-  }
-  .bottom {
-  	margin-bottom: 50px;
   }
 }
 
@@ -161,7 +159,7 @@ input.signUp{
 .twpolMain {
 	margin-bottom: 100px;
 	.details {
-		margin-top: 50px;
+		margin: 50px auto;
 		h2 a{
 			color: $myWhite;
 			padding: 5px;
@@ -171,6 +169,9 @@ input.signUp{
 				color: $myBlack;
 				background: $myWhite;
 			}
+		}
+		.socialIcons {
+			margin: 25px auto;
 		}
 	}
 
@@ -225,6 +226,7 @@ input.signUp{
 
 		.twpol{
 			padding: 100px;
+			padding-bottom: 75%;
 			.logo {
 				margin-top: 0px;
 			}
