--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -127,7 +127,7 @@ input.signUp {
 .twpolMain {
   margin-bottom: 100px; }
   .twpolMain .details {
-    margin: 50px auto; }
+    margin-top: 50px; }
     .twpolMain .details h2 a {
       color: #fff;
       padding: 5px; }
