--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -159,7 +159,7 @@ input.signUp{
 .twpolMain {
 	margin-bottom: 100px;
 	.details {
-		margin: 50px auto;
+		margin-top: 50px;
 		h2 a{
 			color: $myWhite;
 			padding: 5px;
