--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -270,12 +270,15 @@ input.signUp{
 
 			.details {
 				margin: 25px 0;
-				h2 a{
-					color: $myWhite;
-
-					&:hover {
+				h2 {
+					a{
+						margin-top: 0px;
 						color: $myWhite;
-						background: $myBlack;
+
+						&:hover {
+							color: $myWhite;
+							background: $myBlack;
+						}
 					}
 				}
 
