--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -283,7 +283,7 @@ input.signUp{
 				}
 
 				.socialIcons {
-					margin: 10px 0;
+					margin: 5px 0;
 				}
 			}
 		}
@@ -301,7 +301,7 @@ input.signUp{
 			background-size: 100% auto;
 		}
 		.twpolMain {
-			padding: 20px 100px;
+			padding: 20px 200px 5px 200px!important;
 		}
 	}
 
