--- a/assets/css/inarchives.css
+++ b/assets/css/inarchives.css
@@ -127,22 +127,41 @@ input.signUp {
 .twpolMain {
   margin-bottom: 100px; }
   .twpolMain .details {
+    background: rgba(255, 255, 255, 0.75);
+    padding: 10px;
     margin: 25px auto; }
     .twpolMain .details h2 {
+      line-height: 0.75em;
       margin: 0px; }
       .twpolMain .details h2 a {
         font-size: 18px;
-        color: #fff;
+        color: #1a1a1a;
         padding: 2px;
         margin: 5px auto; }
         .twpolMain .details h2 a:hover {
           text-decoration: none;
           color: #1a1a1a;
           background: #fff; }
-    .twpolMain .details .socialIcons img {
-      opacity: transition opacity ease 0.2s; }
-      .twpolMain .details .socialIcons img:hover {
-        opacity: 0.5; }
+    .twpolMain .details .socialIcons {
+      margin: 10px auto 35px auto; }
+      .twpolMain .details .socialIcons img {
+        opacity: transition opacity ease 0.2s; }
+        .twpolMain .details .socialIcons img:hover {
+          opacity: 0.5; }
+    .twpolMain .details .buyMerch {
+      margin: 20px auto; }
+      .twpolMain .details .buyMerch a {
+        border-radius: 0px !important;
+        color: #fff;
+        background: rgba(0, 0, 0, 0.25);
+        border: solid 1px #fff;
+        font-size: 14px;
+        text-transform: uppercase;
+        padding: 14px 24px;
+        transition: background-color 0.25s ease; }
+        .twpolMain .details .buyMerch a:hover {
+          background: #1a1a1a;
+          color: #fff; }
   .twpolMain h1 {
     padding-bottom: 50px; }
   .twpolMain .videoWrapper {
@@ -190,9 +209,13 @@ input.signUp {
     border: solid 3px #1a1a1a;
     width: 100%;
     display: inline-block; }
+    .twpolMain .twpolHeader {
+      background: rgba(255, 255, 255, 0.75);
+      padding: 10px;
+      margin-bottom: 25px; }
     .twpolMain h1 {
-      font-size: 28px;
-      padding-bottom: 20px; }
+      font-size: 30px;
+      padding-bottom: 0px; }
     .twpolMain .staticHeight {
       height: 250px !important; }
       .twpolMain .staticHeight .albumWrapper, .twpolMain .staticHeight .albumWrapper img {
@@ -201,10 +224,11 @@ input.signUp {
     .twpolMain .albumWrapper img {
       margin: 0px; }
     .twpolMain .details {
-      margin: 25px 0; }
+      margin: 25px 0 0 0;
+      padding: 10px 0px; }
       .twpolMain .details h2 a {
         margin-top: 0px;
-        color: #fff; }
+        color: #1a1a1a; }
         .twpolMain .details h2 a:hover {
           color: #fff;
           background: #1a1a1a; }
@@ -215,15 +239,21 @@ input.signUp {
     max-height: 10vw;
     width: auto; } }
 @media only screen and (min-width: 992px) {
+  .twpolMain .details {
+    padding: 15px 100px; }
+
   .twpol {
     background-size: 100% auto; }
 
-  .twpolMain {
-    padding: 20px 200px 5px 200px !important; } }
+  .middleWrapper {
+    padding: 0px; } }
 /* Large Devices, Wide Screens */
 @media only screen and (min-width: 1200px) {
-  .twpolMain {
-    padding: 20px 200px; } }
+  .twpolMain .details {
+    padding: 20px 150px; }
+
+  .middleWrapper {
+    padding: 20px 150px; } }
 @media only screen and (min-width: 1479px) {
   .wp-post-image {
     max-height: 5vw;
