--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -347,14 +347,17 @@ input.signUp{
 
 	  /* Large Devices, Wide Screens */
     @media only screen and (min-width : 1200px) {
+    	.twpol {
+    		padding: 50px 250px;
+    	}
     	.twpolMain {
 				.details {
-					padding: 20px 150px;
+					padding: 20px 50px;
 				}
 			}
 
 			.middleWrapper {
-				padding: 20px 150px;
+				padding: 20px 50px;
 			}
     }
 
@@ -363,6 +366,11 @@ input.signUp{
 		.wp-post-image {
 			max-height: 5vw;
 			width: auto;
+		}
+		.twpolMain {
+			.details {
+				padding: 5%;
+			}
 		}
 		.twpolBody, .twpol {
 			position: inherit;
