--- a/assets/css/sass/inarchives.scss
+++ b/assets/css/sass/inarchives.scss
@@ -167,6 +167,7 @@ input.signUp{
 		h1 {
 			font-family: 'Mohave-Bold', sans-serif!important;
 			font-size: 40px;
+			letter-spacing: 5px;
 			padding: 0px;
 			margin-top: 50px;
 		}
